<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="result"
            type="com.maku.interviewweatherapp.common.data.cache.entities.CacheWeather" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/weather_card_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/card_bg"
            android:checkable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/arua_ug"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:text="@string/very_cloudy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/_2020_12_10"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text="@string/weather_icon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/fav"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/weather_icon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/temp"
                    app:srcCompat="@drawable/ic_favorite_outline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/_25"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/temp_color"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/o"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/temp_color"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/temp"
                    app:layout_constraintStart_toEndOf="@+id/temp"
                    app:layout_constraintTop_toTopOf="@+id/temp"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>