<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".details.DetailsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/arua_ug"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/weather_card_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/card_bg"
            android:checkable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/current_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/current_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/_25"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/temp_color"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/degree"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/o"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/temp_color"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/temp"
                    app:layout_constraintEnd_toStartOf="@+id/description"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/temp"
                    app:layout_constraintTop_toTopOf="@+id/temp"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/very_cloudy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/temp_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/temp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/degree"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/weather_icon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/windy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/wind"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/humidityy"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/humidityy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/windy"
                    app:layout_constraintTop_toBottomOf="@+id/icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_5km_h"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/humid"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/windy" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/humid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/wind"
                    app:layout_constraintTop_toBottomOf="@+id/windy" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/visibilities"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/visibility"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/pressures"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pressures"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="PRESSURE"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/visibilities"
                    app:layout_constraintTop_toBottomOf="@+id/wind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/visibility"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_10km"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/pressure"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visibilities" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_1014_mb"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/visibility"
                    app:layout_constraintTop_toBottomOf="@+id/visibilities" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dewp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="DEW POINT"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/pressures"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visibility" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dewpoint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_25"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/dewp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dewp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>